...
    <item
        android:id="@+id/navigation_albumes"
        android:icon="@drawable/ic_album"
        android:title="@string/title_albumes" />

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/ic_artist"
        android:title="@string/title_artists" />

    <item
        android:id="@+id/navigation_collectors"
        android:icon="@drawable/ic_collectors"
        android:title="@string/title_collectors" />
</menu>
