<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="collector"
            type="com.example.proyectomoviles.models.Collector"/>
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcCollector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCollectorImage"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/gray"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_collectors" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCollectortName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:text="@{collector.name}"
                    tools:text="Coleccionista" />
            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>