...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="@{isLoading ? View.INVISIBLE : View.VISIBLE}">

            <EditText
                android:id="@+id/etArtistSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableEnd="@drawable/ic_search"
                android:hint="@string/hint_artist_search"
                android:imeOptions="actionDone"
...
                android:paddingEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvArtist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/list_item_artists" />
        </LinearLayout>

...
