...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ad_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@{artist.name}"
                        android:textSize="18sp"
                        android:textStyle="bold"
...
                android:textStyle="italic"
                tools:text="Descripción">

            </androidx.appcompat.widget.AppCompatTextView>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabTextAppearance="@style/MyTabLayoutTextAppearance" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
...
